<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Koleshop</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_sign_up">Koleshop Sign Up</string>
    <string name="hello_world">Hello world!</string>
    <string name="koleshop_domain_type">koleshop.com</string>
    <string name="action_settings">Settings</string>
    <string name="action_save_product">Save</string>
    <string name="action_add_product">Add new product</string>
    <string name="action_switch_to_warehouse">Warehouse</string>
    <string name="action_switch_to_myshop">My Shop</string>
    <string name="action_discard_product_changes">Discard</string>
    <string name="title_activity_choose">Use koleshop as</string>
    <string name="title_activity_login">Koleshop login</string>
    <string name="title_activity_get_started">Get Started</string>
    <string name="title_activity_location">Map Location</string>
    <string name="action_search_address">Search Address</string>
    <string name="action_search">Search</string>
    <string name="action_clear">clear</string>
    <string name="action_cart">Cart</string>

    <string-array name="shop_settings_array">
        <item>shopname</item>
        <item>phone</item>
        <item>email</item>
        <item>address</item>
        <item>longitude</item>
        <item>latitude</item>
        <item>categoryId</item>
    </string-array>

    <string name="title_activity_test">TestActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ice_cream">Ice cream</string>
    <string name="title_activity_product">Edit Product</string>
    <string name="title_activity_add_edit_product">Edit Product</string>
    <string name="title_activity_exception_testing">ExceptionTesting</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="category_prompt">Choose a Category...</string>
    <string name="delete_variety">Delete</string>

    <string-array name="navigation_drawer_array">
        <item>Products</item>
        <item>Log Out</item>
        <item>Log In</item>
        <item>Add/Edit Product</item>
        <item>Settings</item>
        <item>Inventory</item>
    </string-array>
    <string name="title_activity_verify_phone_number">VerifyPhoneNumberActivity</string>
    <string name="title_activity_verify_otp">VerifyOTPActivity</string>
    <string name="title_activity_progress">ProgressActivity</string>
    <string name="title_activity_select_seller_category">SelectSellerCategoryActivity</string>
    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_products">My Shop</string>
    <string name="navigation_drawer_add_edit">Add/Edit Product</string>
    <string name="navigation_drawer_inventory">Ware House</string>
    <string name="navigation_drawer_orders">Orders</string>
    <string name="navigation_drawer_sales">Sales</string>
    <string name="navigation_drawer_out_of_stock">Out of Stock</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_help">HELP</string>
    <string name="navigation_drawer_legal">LEGAL</string>
    <string name="navigation_drawer_login">Login</string>
    <string name="navigation_drawer_logout">Log out</string>
    <string name="navigation_drawer_test">Test</string>
    <string name="navigation_drawer_nearby_shops">Nearby Shops</string>
    <string name="navigation_drawer_cart">Cart</string>
    <string name="navigation_drawer_my_orders">My Orders</string>
    <string name="navigation_drawer_saved_items">Saved Items</string>
    <string name="navigation_drawer_favorite_shops">Favorite Shops</string>
    <string name="navigation_drawer_addresses">Addresses</string>
    <string name="string_retry">RETRY</string>
    <string name="title_activity_product_edit">ProductEditActivity</string>
    <string name="choose_image_picker">Change picture</string>
    <string-array name="choose_image_options">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>

    <string name="pick_account">Please pick an account to proceed</string>
    <string name="not_online">Please check your connection</string>
    <string name="login_screen_heading">Koleshop Login</string>

    <string name="save">SAVE</string>
    <string name="dont_save">DONT SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="title_activity_seller_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="shop_name">Shop name</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="open_time">Open time</string>
    <string name="close_time">Close Time</string>
    <string name="max_delivery_distance">Maximum delivery distance (in meters)</string>
    <string name="min_order">Minimum order (for free delivery)</string>
    <string name="delivery_charges">Delivery charges (only for small orders)</string>
    <string name="delivery_start_time">Delivery start time</string>
    <string name="delivery_end_time">Delivery end time</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="title_activity_maps">Select Location</string>
    <string name="title_shop_location">Set Shop Location</string>
    <string name="title_set_delivery_location">Set Delivery Location</string>
    <string name="title_add_new_address">Add new address</string>
    <string name="title_start_shopping">START SHOPPING</string>
    <string name="default_address_nickname">Nickname not set</string>
    <string name="ok">OK</string>
    <string name="search_hint">Search Products</string>
    <string name="title_shop_picture">Shop Picture</string>
    <string name="refresh">REFRESH</string>
    <string name="no_search_results_found">No search results found</string>
    <string name="some_problem_occurred">Some problem occurred</string>
    <string name="no_nearby_shops">No nearby shops are on Koleshop\nHave you entered the correct GPS Location?</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="title_place_order">Place Order</string>
    <string name="navigation_drawer_feedback">FEEDBACK</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_legal">LegalActivity</string>
    <string name="thanks_for_feedback">Thanks for Deciding to Get in Touch</string>
    <string name="cancel_order">Cancel order</string>
    <string name="call">Call</string>
    <string name="not_delivered">Not delivered</string>
    <string name="not_picked_up">Not picked up</string>
    <string name="please_select_address">Please select an address to see nearby shops</string>
    <string name="login_to_set_picture">Please login to set picture</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="empty_cart">No items in the cart\n\nYou can search or add from shops</string>
    <string name="no_out_of_stock">No items out of stock</string>
    <string name="action_create_similar">Create Similar Product</string>
    <string name="add_from_warehouse">Add from Ware House</string>
    <string name="order_placed">Order Placed</string>
    <string name="change_gps_location">CHANGE GPS LOCATION</string>

</resources>
