<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@drawable/ic_home_grey600_24dp"
            android:title="@string/navigation_drawer_home" />

        <item
            android:id="@+id/drawer_nearby_shops"
            android:checked="true"
            android:icon="@drawable/ic_store_grey600_24dp"
            android:title="@string/navigation_drawer_nearby_shops" />

        <item
            android:id="@+id/drawer_cart"
            android:checked="true"
            android:icon="@drawable/ic_shopping_cart_grey600_24dp"
            android:title="@string/navigation_drawer_cart" />

        <!--item
            android:id="@+id/drawer_add_edit"
            android:icon="@drawable/ic_add_edit"
            android:title="@string/navigation_drawer_add_edit" /-->

        <item
            android:id="@+id/drawer_my_orders"
            android:icon="@drawable/ic_assignment_grey600_24dp"
            android:title="@string/navigation_drawer_my_orders" />

        <item
            android:id="@+id/drawer_saved_items"
            android:icon="@drawable/ic_stars_grey600_24dp"
            android:title="@string/navigation_drawer_saved_items" />

        <item
            android:id="@+id/drawer_favorite_shops"
            android:icon="@drawable/ic_favorite_grey600_24dp"
            android:title="@string/navigation_drawer_favorite_shops" />

        <item
            android:id="@+id/drawer_addresses"
            android:icon="@drawable/ic_map_grey600_24dp"
            android:title="@string/navigation_drawer_addresses" />

        <!--item
            android:id="@+id/drawer_test"
            android:icon="@drawable/ic_login"
            android:title="@string/navigation_drawer_test"/-->

    </group>

    <group
        android:id="@+id/buyer_drawer_settings"
        android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/navigation_drawer_settings" />

        <item
            android:id="@+id/drawer_login"
            android:icon="@drawable/ic_login_lock"
            android:title="@string/navigation_drawer_login" />

        <item
            android:id="@+id/drawer_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/navigation_drawer_logout" />

    </group>

    <group android:id="@+id/buyer_drawer_help"
        android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_help"
            android:menuCategory="secondary"
            android:title="@string/navigation_drawer_help" />
    </group>

    <group android:id="@+id/buyer_drawer_legal"
        android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_legal"
            android:menuCategory="secondary"
            android:title="@string/navigation_drawer_legal" />
    </group>

</menu>