<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    tools:context=".ui.buyer.fragments.NearbyShopsFragment">

    <ViewFlipper
        android:id="@+id/vf_fns"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TabLayout
                android:id="@+id/tab_layout_fns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:fontFamily="sans-serif-light"
                app:tabIndicatorColor="@android:color/white" />

            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager_fns"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_fns"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_fns_no_shops"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_pinky_embarrased" />

            <TextView
                android:id="@+id/tv_ags_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_fns_no_shops"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/no_nearby_shops"
                android:textColor="@color/primary_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_change_gps_location"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_gps_location"
                    android:textColor="@color/primary_text" />

                <Button
                    android:id="@+id/button_refresh_nearby_shops"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refresh"
                    android:textColor="@color/primary_text" />

            </LinearLayout>

        </RelativeLayout>

        <!-- no internet connection | view flipper child 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/image_cloud_disconnect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="Please check connection and try again"
                android:textColor="@color/default_background_font" />

            <Button
                android:id="@+id/button_retry_nearby_shops"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:text="@string/string_retry"
                android:textColor="@color/primary_text" />

        </LinearLayout>

        <!-- no address selected | view flipper child 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_pinky_sad" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/please_select_address"
                android:textColor="@color/default_background_font" />

        </LinearLayout>

    </ViewFlipper>

</FrameLayout>
