<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.seller.fragments.settings.DeliverySettingsFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_distance" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/met_max_delivery_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="number"
                    android:textSize="16sp"
                    app:met_floatingLabel="normal"
                    android:layout_marginLeft="72dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/max_delivery_distance" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_rupee_coin" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/met_min_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="numberDecimal"
                    android:textSize="16sp"
                    app:met_floatingLabel="normal"
                    android:layout_marginLeft="72dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/min_order" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_rupee_symbol" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/met_delivery_charges"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="72dp"
                    android:layout_marginRight="16dp"
                    app:met_floatingLabel="normal"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:hint="@string/delivery_charges" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_scooter_wheelie" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="72dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/delivery_start_time"
                    android:textColor="@color/secondary_text" />

                <TextView
                    android:id="@+id/tv_settings_deliery_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="72dp"
                    android:text="N/A"
                    android:textColor="@color/secondary_text" />

                <ImageButton
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:background="@color/transparent"
                    android:onClick="editDeliveryStartTime"
                    android:src="@drawable/ic_edit_grey600_24dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_scooter_stoppie" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="72dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/delivery_end_time"
                    android:textColor="@color/secondary_text" />

                <TextView
                    android:id="@+id/tv_settings_deliery_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="72dp"
                    android:text="N/A"
                    android:textColor="@color/secondary_text" />

                <ImageButton
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_edit_grey600_24dp"
                    android:onClick="editDeliveryEndTime"/>

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
